@@ -14,6 +14,7 @@ date Version 3.00.51
 * FS#261 - "wxMenuItem has no 'permission' property"
 * FS#265 - "wxID_PREFERENCES should not be redefined"
 * FS#269 - "[OS X] menu items shown at wrong place in menu bar" (patch from Auria)
+* FS#263 - "Frame not resized correctly in designer when menubar/toolbar/statusbar present"
 
 09/27/2007 Version 3.00.50 (RC3)
 * FS#234 - "wxFrame name parameter not available."
